# invex

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  usage.rst
invex/: __init__.py  cli.py  pyfolio_wrapper.py  utils.py
tests/: reports.py  test_invex.py
