

[metadata]
name = invex
summary = invex
description-file =
    README.rst
author = xridge
author-email = info@xridge.io
home-page = https://github.com/xridge/invex
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.5
keywords = invex
[entry_points]
console_scripts =
    invex = invex.cli:main

[files]
packages = invex
extra-files = invex/py.typed

[options]
zip_save = False

[pbr]
warnerrors = True

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[tool:pytest]
collect_ignore = ['setup.py']
